5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1723_2496.log
== TEST (2019-05-09 10:55:14) 
-- CODE:
num = int(input("numero:")
num = 0
while(num !=-1):
	x = x + num
	num= int(input("numm:")
-- ERROR:
File "XXXX", line 2
    num = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:55:23) 
-- CODE:
num = int(input("numero:")
x= 0
while(num !=-1):
	x = x + num
	num= int(input("numm:")
-- ERROR:
File "XXXX", line 2
    x= 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:56:18) 
-- CODE:
num = int(input("numero:"))
x = 0
while(num !=-1):
	x = x + num
	num= int(input("numm:"))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:56:30) 
-- CODE:
num = int(input("numero:"))
x = 0
while(num !=-1):
	x = x + num
	num= int(input("numm:"))
print(x)
-- EXECUTION TIME:
0.133895
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
